; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_large.c_large_malloc.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_large.c_large_malloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CACHELINE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @large_malloc(i32* %0, i32* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i64, i64* %7, align 8
  %10 = load i64, i64* %7, align 8
  %11 = call i64 @sz_s2u(i64 %10)
  %12 = icmp eq i64 %9, %11
  %13 = zext i1 %12 to i32
  %14 = call i32 @assert(i32 %13)
  %15 = load i32*, i32** %5, align 8
  %16 = load i32*, i32** %6, align 8
  %17 = load i64, i64* %7, align 8
  %18 = load i32, i32* @CACHELINE, align 4
  %19 = load i32, i32* %8, align 4
  %20 = call i8* @large_palloc(i32* %15, i32* %16, i64 %17, i32 %18, i32 %19)
  ret i8* %20
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @sz_s2u(i64) #1

declare dso_local i8* @large_palloc(i32*, i32*, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
